--- a/li5.html
+++ b/li5.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="es-PE">
+
 <head>
     <meta charset="utf-8">
     <title>SisePuede: Zepto en navegadores antiguos y modernos</title>
@@ -12,40 +13,57 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- http://modernizr.com/download/?-es5-setclasses -->
     <script src="script/vendor/modernizr-custom.min.js"></script>
-    
     <script>
-    var //Nos servirá para iniciar diálogo por cada instrucción de ser necesario
+    var // Nos servirá para iniciar diálogo en cada instrucción de ser necesario
         dialogo = [];
 
-    if ( !Modernizr.es5 ) {
+    if (!Modernizr.es5) {
         dialogo[0] = 'shim';
 
         /*! https://gist.github.com/jalbertbowden/5174156 !*/
         var ieVersion = (!!window.ActiveXObject && +(/msie\s(\d+)/i.exec(navigator.userAgent)[1])) || NaN;
 
-        /*! @ref http://www.hagenburger.net/BLOG/Simple-HTML5-Fix-for-IE.html !*/
-        'article aside dialog figcaption figure footer header main nav section mark template'.replace(/\w+/g, function(n) {
-            document.createElement(n)
-        });
+        dialogo[0] = 'es3';
+
+        /*! Añadimos ECMAScript 5 Shim !*/
+        document.write('\u003Cscript src="script/vendor/legacy/es5-shim.min.js">\u003C/script>');
+        document.write('\u003Cscript src="script/vendor/legacy/es5-sham.min.js">\u003C/script>');
+
+        /*! AQUÍ puedes agregar ECMAScript 6 Shim !*/
 
         /*! @ref http://browserhacks.com/#hack-51eca7694aed2dcc3266bc9c8de72872 !*/
         if ( /*@cc_on!@*/ true) dialogo[1] = 'no-IE';
         if (ieVersion) dialogo[2] = 'IE';
 
+        if (ieVersion < 10) {
+            /*! @ref http://www.hagenburger.net/BLOG/Simple-HTML5-Fix-for-IE.html !*/
+            'section article aside header footer nav figure figcaption time mark main menu'.replace(/\w+/g, function(n) {
+                document.createElement(n)
+            });
+        }
+
         /*!! @ref https://gist.github.com/visualisierte/5891086 */
         if (ieVersion < 9) document.write('\u003Cscript src="script/vendor/legacy/getComputedStyle.js">\u003C/script>');
 
-        if (ieVersion > 7 || /*@cc_on!@*/ true) document.write('\u003Cscript src="script/vendor/legacy/CSS_selector_engine.js">\u003C/script>');
+        if (ieVersion < 8) {
+             dialogo[3] = 'CSS_selector_engine';
+            /*! @ref https://github.com/termi/CSS_selector_engine !*/
+            document.write('\u003Cscript src="script/vendor/legacy/CSS_selector_engine.ielt8.js">\u003C/script>');
+        }
+
+        if (ieVersion > 7 || /*@cc_on!@*/ true) {
+            dialogo[3] = 'CSS_selector_engine';
+            /*! @ref https://github.com/termi/CSS_selector_engine !*/
+            document.write('\u003Cscript src="script/vendor/legacy/CSS_selector_engine.js">\u003C/script>');
+        }
 
         // {Aquí se puede agregar más polyfills: http://html5polyfills.com}
+        document.write('\u003Cscript src="script/vendor/legacy/classList.js">\u003C/script>');
 
-        /*! Añadimos ECMAScript 5 Shim !*/
-        document.write('\u003Cscript src="script/vendor/legacy/a.js">\u003C/script>');
-
-        /*! AQUÍ puedes agregar ECMAScript 6 Shim !*/
-
+        dialogo[4] = 'es5';
+    } else {
+        dialogo[4] = !!( Array.prototype && Array.prototype.pop ) ? 'es6' : 'es1';
     }
-    dialogo[3] = 'es5';
     </script>
     <!-- // Cuando el navegador tiene desactivado el motor de Javascript -->
     <noscript>
@@ -90,64 +108,81 @@
     window.$ || document.write('\u003Cscript src="script/vendor/zepto.min.js">\u003C/script>')
     </script>
     <script>
-    ;
-    (function(undefined) {
-        var //Library Function Name: lib
-            lib = null,
-            doc = document;
-        if (typeof Zepto === "undefined" && typeof $ === "function") {
-            lib = $;
-        } else if (typeof Zepto === "function") {
-            lib = Zepto;
-            /*! En main.js se listan plugins y los propios !*/
-            doc.write('\u003Cscript src="script/main.js">\u003C/script>');
+    var //Library Function Name: lib
+        lib = null,
+        doc = document;
+    if (typeof Zepto === "undefined" && typeof $ === "function") {
+        lib = $;
+    } else if (typeof Zepto === "function") {
+        lib = Zepto;
+        /*! En main.js se listan plugins y los propios !*/
+        doc.write('\u003Cscript src="script/main.js">\u003C/script>');
+    } else {
+        try {
+            dialogo[5] = 'no-lib';
+            /*! Agremamos .no-lib al elemento html para apoyo si es que no pudo cargar alguna biblioteca !*/
+            (function(a) {
+                "svg" === a.nodeName.toLowerCase() ? a.className.baseVal += " no-lib" : a.className += " no-lib";
+            })(doc.documentElement || doc.body.parentNode || doc.body);
+            throw new TypeError('No se pudo cargar ninguna biblioteca');
+        } catch (e) {
+            //console.log('Upss.. ' + e.message);
+        }
+    }
+
+    (function(what, can, i, use) {
+        'use strict';
+
+        use = use || !this;
+
+        what(can, i, use);
+
+        i.write('\u003Cscript src="script/' + (use ? 'vanilla' : 'non-legacy') + '.js">\u003C/script>');
+
+    })(typeof what === 'function' ? what : function() {}, (function() {
+        return this || (1, eval)('this');
+    }()), document, lib);
+
+    /*! Opcional | TODO Plain JS !*/
+    //Global
+    function what(view, doc, boo) {
+        var docEle = doc.documentElement || doc.body.parentNode || doc.body;
+
+        var css = (function(h) {
+            var k = "svg" === h.nodeName.toLowerCase() ? h.className.baseVal : h.className;
+            return {
+                f: function(a) {
+                    return new RegExp("(^| )" + a + "( |$)");
+                },
+                contain: function(a, b) {
+                    return k && k.match(css.f(b));
+                },
+                remove: function(a, b) {
+                    a.className = k.replace(css.f(b), " ").replace(/  /g, " ");
+                    return true;
+                },
+                add: function(a, b) {
+                    if (css.contain(a, b)) {
+                        return true;
+                    }
+                    "svg" === h.nodeName.toLowerCase() ? a.className.baseVal += " " + b : a.className += " " + b;
+                }
+
+            };
+
+        })(docEle);
+
+
+        if (!boo) {
+            css.add(docEle, 'legacy');
+            doc.getElementById('browsehappy').style.display = 'block';
         } else {
-            try {
-                dialogo[4] = 'no-lib';
-                /*! Agremamos .no-lib al elemento html para apoyo si es que no pudo cargar alguna biblioteca !*/
-                doc.documentElement || (doc.documentElement = doc.body.parentNode || doc.body);
-                var h = doc.documentElement;
-                (function(k) {
-                    k += ' no-lib'
-                })(h.nodeName.toLowerCase() === 'svg' ? h.className.baseVal : h.className)
-                throw new TypeError('No se pudo cargar ninguna biblioteca');
-            } catch (e) {
-                //console.log('Upss.. ' + e.message);
+            if (css.contain(docEle, 'no-es5')) {
+                css.remove(docEle, 'no-es5');
             }
         }
-
-        /*! Opcional | TODO Plain JS !*/
-        (function(what, can, i, use) {
-            'use strict';
-
-            use = use || !this;
-
-            what(can, i, use);
-
-            i.write('\u003Cscript src="script/' + (use ? 'vanilla' : 'non-legacy') + '.js">\u003C/script>');
-
-        })(typeof what === 'function' ? what : function() {}, (function() {
-            return this || (1, eval)('this');
-        }()), document, lib);
-
-
-        function what(w, d, c) {
-            h = d.documentElement || d.body.parentNode || d.body,
-                k = h.nodeName.toLowerCase() === 'svg' ? h.className.baseVal : h.className;
-            if (!c) {
-                k += ' no-es5';
-                d.getElementById('browsehappy').style.display = 'block';
-            } else {
-                k = k.replace(/(\s|^)no-es5(\s|$)/, ' ');
-            }
-            return;
-        }
-
-
-        //Global
-        (window || this).lib = lib;
-
-    }).call(('object' == typeof window && window.window === window && window) || (typeof global == 'object' && global.global === global && global) || (typeof self == 'object' && self.self === self && self) || {});
+        return;
+    }
     </script>
     <!-- =============== FIN javascript =============== -->
 </body>
