--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
 
         dialogo[0] = 'es3';
 
-        /*! Añadimos ECMAScript 5 Shim !*/
-        document.write('\u003Cscript src="script/vendor/legacy/es5-shim.min.js">\u003C/script>');
-        document.write('\u003Cscript src="script/vendor/legacy/es5-sham.min.js">\u003C/script>');
-
-        /*! AQUÍ puedes agregar ECMAScript 6 Shim !*/
-
         /*! @ref http://browserhacks.com/#hack-51eca7694aed2dcc3266bc9c8de72872 !*/
         if ( /*@cc_on!@*/ true) dialogo[1] = 'no-IE';
         if (ieVersion) dialogo[2] = 'IE';
@@ -41,8 +35,13 @@
             });
         }
 
-        /*!! @ref https://gist.github.com/visualisierte/5891086 */
-        if (ieVersion < 9) document.write('\u003Cscript src="script/vendor/legacy/getComputedStyle.js">\u003C/script>');
+        if (ieVersion < 9) {
+            /*!! @ref https://gist.github.com/visualisierte/5891086 */
+            document.write('\u003Cscript src="script/vendor/legacy/getComputedStyle.js">\u003C/script>');
+
+            /*! https://github.com/nbouvrette/eventListenerPolyfill !*/
+            document.write('\u003Cscript src="script/vendor/legacy/eventListenerIEPolyfill.min.js">\u003C/script>');
+        }
 
         if (ieVersion < 8) {
         	 dialogo[3] = 'CSS_selector_engine';
@@ -58,6 +57,10 @@
 
         // {Aquí se puede agregar más polyfills: http://html5polyfills.com}
         document.write('\u003Cscript src="script/vendor/legacy/classList.js">\u003C/script>');
+
+        /*! Añadimos ECMAScript 5 Shim !*/
+        document.write('\u003Cscript src="script/vendor/legacy/es5-shim.min.js">\u003C/script>');
+        document.write('\u003Cscript src="script/vendor/legacy/es5-sham.min.js">\u003C/script>');
 
         dialogo[4] = 'es5';
 
