document.write se ha removido
Debido a la deficiencia de la función document.write, era necesario
usar una función de nombre loadScript lo cual puede ser creado por uno
mismo.

--- a/5.xhtml
+++ b/5.xhtml
@@ -56,6 +56,10 @@
     <!-- =============== TODO javascript =============== -->
     <script type="text/javascript">
     <!--//--><![CDATA[//><!--
+    var loadScript = function(src) {
+      var js = document.createElement('script'); js.type = 'text/javascript'; js.src = src;
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(js, s);
+    };
     (function(what, can, i, use) {
         'use strict';
 
@@ -63,7 +67,7 @@
 
         what(can, i, use);
 
-        i.write('\u003Cscript src="script/' + (use ? 'vanilla' : 'non-legacy') + '.js">\u003C/script>');
+        loadScript('script/' + (use ? 'vanilla' : 'non-legacy') + '.js');
 
     })(typeof what === 'function' ? what : function() {}, (function() {
         return this || (1, eval)('this');
